--- a/Step1.html
+++ b/Step1.html
@@ -84,12 +84,28 @@
         </span>
 
         <p>
-            A literatura humanista tinha como característica possuir várias obras nos gêneros de prosa,
-            poesia e teatro. Temos como exemplos de textos humanistas a poesia palaciana,
-            as crônicas historiográficas e o teatro vicentino, entre outras formas de expressão.
-            Vale ressaltar que as críticas sociais como a denúncia dos costumes e problemas da época,
-            os conflitos entre razão e fé e a valorização do ser humano eram os temas mais comuns nesse movimento.
-        </p>
+            A literatura humanista tinha como característica se expressar nos gêneros de prosa,
+            poesia e teatro.por exemplo: 
+          </p>
+            <ul> 
+              <li>
+                A poesia palaciana, que era produzida nos palácios e era destinada aos nobres.
+              </li> 
+              <li>
+                As crônicas historiográficas, registro fiel e cronológico dos eventos históricos,
+                tendo como o principal nome Fernão Lopes, criador da crônica de EL-Rei D. Pedro I.
+              </li>
+              <li>
+                O teatro Vicentino, texto teatral produzido por Gil Vicente que retratava a sociedade portuguesa e 
+                seus costumes através de sátiras. 
+              </li>
+            </ul>  
+         <p>
+            Supreendentemente o Humanismo não ficou restrito à Itália,
+            mas se espalhou por toda a Europa dando origem a vários autores e atistas de diferentes países, 
+            como Inglaterra, Alemanha, Portugal, Espanha e Holanda, onde todas as suas obras tinham em comum
+            demostrar o conflito entre a razão e a fé, a valorização do ser humano e as críticas sociais daquele tempo. 
+         </p>
 
     </div>
     
