Adicionei uma imagem e atualizei algumas informações

--- a/Step1.html
+++ b/Step1.html
@@ -154,7 +154,7 @@
               Luís de Camões.<br> 
         </span>
         <span class="center">
-             <strong>Os Lusíadas-canto 1</strong><br> 
+             <strong>Os Lusíadas-canto 1-trecho</strong><br> 
              
              <br>“As armas e os Barões assinalados,<br>
              Que da ocidental praia Lusitana,<br> 
@@ -169,8 +169,27 @@
         </span>
          
         <p>
-         A literatura classicista se manifesta nos gêneros lírico, épico e dramático.
+         A literatura classicista se manifesta em diferentes gêneros literários. Tendo como exemplo:
         </p>
+            <ul> 
+              <li>
+                Gênero épico: Conta grandes feitos heroicos e aventuras. O maior exemplo é Os Lusíadas, de Luís de Camões.
+              </li> 
+              <li>
+                Gênero Lírico: Aparece através da poesia com formas fixas e rigor métrico. Por exemplo, o soneto.
+              </li>
+              <li>
+                Gênero dramático: Manifesta-se na forma de teatro, trazenda a tragédia e a comédia.
+              </li>
+            </ul>  
+          <p>
+            Na maiora das obras relacionadas ao classicismo, também conhecido como literatura renascentista,
+            tinha como tema central o amor, a mitologia grego-romana, o heroísmo, as aventuras e a filosofia, pois eram assuntos comuns na época.  
+          </p>
+          <span class="center">
+            <br><img src="escola-de-atenas.jpg" width="600" height="300">
+            <br>A pintura "Escola de Atenas" (1509-1510) de Rafael Sanzio 
+          </span>
 
 </body>
 </html>
