adicionei uma parte do quinhentismo.

--- a/Step1.html
+++ b/Step1.html
@@ -109,7 +109,7 @@
 
     </div>
     
-       <div class="overBackground">
+    <div class="overBackground">
         <h1 class="title" id = "StarterTitle">Classicismo</h1>
 
         <p>
@@ -190,6 +190,28 @@
             <br><img src="escola-de-atenas.jpg" width="600" height="300">
             <br>A pintura "Escola de Atenas" (1509-1510) de Rafael Sanzio 
           </span>
+     </div>
 
+     <div class="overBackground">
+        <h1 class="title" id = "StarterTitle">Quinhentismo</h1>
+        <p>
+           O quinhentismo é conhecido por ser o primeiro movimento literário no Brasil, 
+           que ocorreu no século XVI e trouxe uma série de mudanças.</section>
+        </p>
+        <h2 class="subtitle">Contexto histórico</h2>
+          <ul>
+            <li>
+              As grandes navegações e o uso da pólvora fizeram os europeus dominarem novas terras,
+              sendo uma delas o Brasil. 
+            </li>
+            <li>
+             Com a reforma protestante, a igreja católica criou a contrarreforma católica com o objetivo
+             de reformar a própria igreja, além de catequizar os indígenas das novas terras descobertas.
+            </li>
+          </ul>
+          <p>
+            portanto, o quinhentismo é marcado pelas grandes navegações, a colonizanção do Brasil por Portugal e
+            os textos desse período.
+          </p>
 </body>
 </html>
