layout mais reponsivo para mobile

--- a/Step1.html
+++ b/Step1.html
@@ -187,7 +187,7 @@
             tinha como tema central o amor, a mitologia grego-romana, o heroísmo, as aventuras e a filosofia, pois eram assuntos comuns na época.  
           </p>
           <span class="center">
-            <br><img src="escola-de-atenas.jpg" width="600" height="300">
+            <br><img src="img/escola-de-atenas.jpg" class="center" style="width: 80%;">
             <br>A pintura "Escola de Atenas" (1509-1510) de Rafael Sanzio 
           </span>
      </div>
