algumas informações do quinhentismo

--- a/Step1.html
+++ b/Step1.html
@@ -136,7 +136,7 @@
 
            <strong>Amor é fogo que arde sem se ver</strong><br> 
 
-            <br>“Amor é fogo que arde sem se ver;<br>
+            <br>Amor é fogo que arde sem se ver;<br>
             É ferida que dói e não se sente;<br>
             É um contentamento descontente,<br>
             É dor que desatina sem doer.<br>
@@ -149,21 +149,21 @@
             É ter com quem nos mata lealdade.<br>
             <br>Mas como causar pode seu favor<br>
             Nos corações humanos amizade,<br>
-            Se tão contrário a si é o mesmo Amor?”<br>
+            Se tão contrário a si é o mesmo Amor?<br>
             
               Luís de Camões.<br> 
         </span>
         <span class="center">
              <strong>Os Lusíadas-canto 1-trecho</strong><br> 
              
-             <br>“As armas e os Barões assinalados,<br>
+             <br>As armas e os Barões assinalados,<br>
              Que da ocidental praia Lusitana,<br> 
              Por mares nunca de antes navegados,<br>
              Passaram ainda além da Tamrobana,<br>
              Em perigos e guerras esforçados,<br>
              Mais do que prometia a força humana,<br>
              E entre gente remota edificam<br> 
-             Novo Reino, que tanto sublimaram;”<br>
+             Novo Reino, que tanto sublimaram;<br>
 
              Luís de Camões.<br>
         </span>
@@ -205,13 +205,18 @@
               sendo uma delas o Brasil. 
             </li>
             <li>
+              A economia do Brasil ainda estava se desenvolvendo,e, no inicio, era baseada na extração do pau-brasil, passando a se sustentar a partir da relação de colônia e reino
+              e focando-se na produção e exportação de matéria-prima e produtos naturais. 
+            </li>
+            <li>
              Com a reforma protestante, a igreja católica criou a contrarreforma católica com o objetivo
-             de reformar a própria igreja, além de catequizar os indígenas das novas terras descobertas.
+             de reformar a própria igreja, além de catequizar os indígenas das novas áreas descobertas.
             </li>
           </ul>
           <p>
             portanto, o quinhentismo é marcado pelas grandes navegações, a colonizanção do Brasil por Portugal e
-            os textos desse período.
+            os textos desse período, que eram produzidos em forma de carta e serviam para informar o Reino de portugual sobre 
+            a nova terra.
           </p>
 </body>
 </html>
