Terminei o quinhentismo, botei o que gaby botou no grupo e melhorei um pouquinho as fontes

--- a/Step1.html
+++ b/Step1.html
@@ -173,7 +173,7 @@
         </p>
             <ul> 
               <li>
-                Gênero épico: Conta grandes feitos heroicos e aventuras. O maior exemplo é Os Lusíadas, de Luís de Camões.
+                Gênero épico: Conta grandes feitos heróicos e aventuras. O maior exemplo é Os Lusíadas, de Luís de Camões.
               </li> 
               <li>
                 Gênero Lírico: Aparece através da poesia com formas fixas e rigor métrico. Por exemplo, o soneto.
@@ -268,14 +268,36 @@
            </p>
            <ul>
             <li> 
-              Literatura de Iformação:
+              Literatura de Informação
             </li>
             <li>
-              Literatura de Catquese:
+              Literatura de Catequese
             </li>
            </ul>
+         
+           <h2 class="subtitle"> Literatura de Informação </h2>
+
            <p>
-            quinhentismo 
+              A literatura de informação aconteceu com a vinda dos portugueses ao Brasil,
+              nos navios tinham os chamados escrivães, os designados a escrever sobre o território 
+              encontrado à Portugal.
+           </p>
+
+           <p>
+              Como o nome sugere, a literatura de informação dava informação do Brasil à Portugal,
+              levando a geografia, cultura e adjetivos da terras e povos encontrados.
+           </p>
+
+           <h2 class="subtitle"> Literatura de Catequese </h2>
+
+           <p>
+              Em suma, ela é, também a literatura de informação, mas aquele escrita pelos jesuítas.
+              Eles eram encarregados de converter os índios às crenças europeias.
+           </p>
+
+           <p>
+              A literatura de catequese descrevia não apenas, ao imperador português, o local e cultura dos povos locais,
+              mas, também, as crenças, e religiões.
            </p>
 </body>
 </html>
