--- a/fonts.html
+++ b/fonts.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Referências bibliográficas</title>
     <link rel="stylesheet" href="styles/General.css">
+
+    <style>
+         li a{
+            color: #c3c782da;
+            text-decoration: none;
+         }
+         li a:hover{
+            color: #293142;
+            text-decoration: underline;
+         }
+
+    </style>
 </head>
 <body>
 
@@ -34,7 +46,7 @@
             <a href="https://www.todamateria.com.br/classicismo/" target="_blank">classicismo - toda matéria</a>
          </li>
          <li>
-            <a href="https://brasilescola.uol.com.br/literatura/classicismo.htm" target="_blank">Brasil Escola</a>
+            <a href="https://brasilescola.uol.com.br/literatura/classicismo.htm" target="_blank">Classicismo - Brasil Escola</a>
          </li>
          <li>
             <a href="https://www.todamateria.com.br/quinhentismo/" target="_blank">Quinhentismo - toda matéria</a>
@@ -42,6 +54,13 @@
          <li>
             <a href="https://brasilescola.uol.com.br/literatura/quinhentismo-brasileiro.htm" target="_blank">Quinhentismo - Brasil Escola</a>
          </li>
+         <li>
+            <a href="https://www.todamateria.com.br/literatura-de-informacao/" target="_blank">Literatura de informação - toda matéria</a>
+         </li>
+         <li>
+            <a href="https://www.todamateria.com.br/literatura-de-catequese/" target="_blank">Literatura de catequese - toda matéria</a>
+         </li>
+
     </ul>
     </div>
 </body>
