adicionei um index simples, com um cabeçalho

--- a/index.html
+++ b/index.html
@@ -17,9 +17,37 @@
         <a href="Step4.html">...</a>
     </nav>
 
-    <h1 class="title" id = "StarterTitle">Nao sei um titulo</h1>
+    <img src="img/if.png" class="image">
 
-    <h2 class="subtitle">Objetivos do trabalho, alunos...</h2>
+    <h1 class="title" id = "StarterTitle">A evolução literária</h1>
+
+    <h2 class="subtitle"> Humanismo, Classicismo e Quinhentismo </h2>
+
+    <p>
+        Neste Site, abordaremos como o homem, o mundo e a literatura foram influenciados 
+        com os três movimentos literários: Humanismo, Classicismo e Quinhentismo.
+    </p>
+
+    <div class="header">
+
+        <span>
+            Instituição de ensino: Instituto Federal de Ciência e tecnologia baiano;
+        </span>
+
+        <span>
+            Componente curricular: Língua portuguesa;
+        </span>
+
+        <span>
+            Docente: Rafaella Elisa Santos Rolim Miranda Brito;
+        </span>
+
+        <span>
+            Corpo Discente: Benjamin Lima, Creusa Gabrielly, Eliel De Almeida, Gabriel Sampaio,
+            Jackson Da Silva, João Amorim, Lucas Tonico, Victor Marley, Wesley Silva.
+        </span>
+    </div>
+    
 
 </body>
 </html>
