troquei a step para um resumo e um terço da step 2

--- a/Step2.html
+++ b/Step2.html
@@ -19,7 +19,41 @@
 
     <div class="overBackground">
 
-    </div>
+        <h1 class="title"> Textos Autorais </h1>
 
+        <h2 class="subtitle"> ...(Humanismo) </h2>
+
+        <p>
+            -Todos nascem para retornar ao nada. Alguns, todavia, retornam a troco de nada. 
+            A troco do conforto daqueles que não conhecem o rosto de um sofredor sequer, 
+            aqueles que são enviados para batalhas sem saber a razão. Aqueles atribuídos
+            mais valor aos braços do que o coração.  Deste lado,  solitude me antagoniza. 
+            Após alcançar a falsa esperança, vem a realização: Há apenas eu, destinado a
+            nunca voltar. Apenas parte de um luxuoso trono de carne e ossos. 
+            <br><br>
+            -E então, fez-se a luz. E então, não havia mais nada.  A sinfonia dos quatro 
+            cavaleiros é bombardeada por tamanha quietude, pela primeira vez ouvi a mim 
+            mesmo.  O lago de fogo capturado por meus olhos se esvanece, porém em minha 
+            mente a perecer se recusa.  Não se faz voz o que desejo dizer. Não importa; nunca 
+            me importou quando mais precisei. Mãos e pés, que tanto espalharam pólvora, 
+            agora são punidos por seus pecados.
+            <br><br>
+            -Verdadeiramente, faço-me um peão; condenado a seguir em frente, mesmo 
+            quando não em corpo. Cavaleiros correm por esporte pelo campo, exibindo sua 
+            reluzente armadura. Torres de corpos aparecem como se movessem. Reis, rainhas 
+            e bispos observam sem nenhum remorso. 
+            <br><br>
+            -Sagrados sejam! Sagrado seja!  Sagrado seja o ego, sagrada seja a desgraça. 
+            Sagrada seja a apatia, sagrado seja o assassinato em massa. Ó Satanael, livrai-me 
+            de ver o outro dia? 
+        </p>
+
+
+        <h2 class="subtitle"> ...(Classicismo) </h2>
+
+        <p>
+            Mais texto
+        </p>
+    </div>
 </body>
 </html>
