Adicionei um javascript para criar efeito das letras aparecendo e mudei um pouco o design do css

--- a/Step1-2.html
+++ b/Step1-2.html
@@ -300,5 +300,7 @@
               mas, também, as crenças, e religiões.
            </p>
      </div>
+
+     <script src="scripts/script.js"></script>
 </body>
 </html>
