--- a/Step1.html
+++ b/Step1.html
@@ -68,5 +68,6 @@
       <a class="link" href="Step1-2.html"> Para mais informações sobre os temas. </a>
     </div>
         
+    <script src="scripts/script.js"></script>
 </body>
 </html>
