--- a/Step3.html
+++ b/Step3.html
@@ -48,5 +48,7 @@
             liberdade de reflexão e aproximação com questões atuais. 
         </p>
     </div>
+
+    <script src="scripts/script.js"></script>
 </body>
 </html>
