so corrigi a escrita do ultimo paragrafo

--- a/Step3.html
+++ b/Step3.html
@@ -42,9 +42,9 @@
 
 
         <p>
-                Assim, percebe-se que ao longo dos períodos a guerra deixa de ser apenas um fato 
+            Assim, percebe-se que ao longo dos períodos a guerra deixa de ser apenas um fato 
             histórico ou um ato glorioso e passa a ser analisada como um problema humano e social. Na 
-            nossa na visão , o Humanismo foi o estilo mais fácil de produzir, pois, nos  permitiu maior 
+            nossa visão, o Humanismo foi o estilo mais fácil de produzir, pois, nos  permitiu maior 
             liberdade de reflexão e aproximação com questões atuais. 
         </p>
     </div>
