--- a/Step1.html
+++ b/Step1.html
@@ -57,7 +57,7 @@
         europeia, influenciando a literatura nos três grandes gêneros
         literários (Dramático, épico e lírico), focando no amor e na cultura
         greco-romana. Cem anos adiante, Portugal chega ao Brasil, trazendo
-        consigo suas culturas e crenças. Este movimento literário com as
+        consigo suas culturas e crenças. Este período com as
         grandes navegações se chamou quinhentismo, nas caravelas tinham 
         os escrivães, que escreviam 2 tipos de textos: literatura de
         informação e de catequese. Ambas eram cartas ao imperador sobre
