adicionei parte da logica do step 4

--- a/Step4.html
+++ b/Step4.html
@@ -19,6 +19,53 @@
 
     <div class="overBackground">
 
+
+        <div class="text" id="initialText">
+
+            <p>
+                texto padrao: Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore unde est inventore tempore atque? Officiis fugit cum excepturi iusto alias quisquam, quam odio rem necessitatibus, magnam nam. Deleniti, obcaecati ex.
+            </p>
+            
+
+            <button type="button" value="hum" class="FirstChoose">
+                Eu gosto de humanos
+            </button>
+
+             <button type="button" value="class" class="FirstChoose">
+                Eu gosto dos valores classicos greco-Romanos
+            </button>
+
+             <button type="button" value="quin" class="FirstChoose">
+                Eu gosto de Deus
+            </button>
+
+        </div>
+
+        <div class="text" id="humText">
+
+            <p>
+                texto humanista: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio unde, labore similique corrupti ipsum, blanditiis dolores incidunt fugit laudantium ut vitae, magni quasi nostrum voluptates dicta asperiores soluta placeat non.
+            </p>
+        </div>
+
+        <div class="text" id="classText">
+
+            <p>
+                texto classico: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quas veritatis, unde adipisci distinctio aliquid debitis doloremque officia nesciunt dolore totam, error vitae quos quasi dignissimos excepturi a, illo quam!
+            </p>
+        </div>
+
+        <div class="text" id="quinText">
+
+            <p>
+                texto quinhentos: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque in voluptatibus enim dolorem sunt dolore cupiditate ratione hic nostrum, aperiam suscipit, repellendus cum consequatur voluptatum odit molestias veniam impedit natus.
+            </p>
+        </div>
+
+        <button type="button" id="reset">
+            Tentar outra escolha...
+        </button>
+
     </div>
 
     <script src="scripts/script.js"></script>
